[tool.poetry]
name = "module-6-ridelbusiness"
version = "0.1.0"
description = ""
authors = ["Riedhelbusiness <riedhelbusiness@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
